--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -39,11 +39,11 @@
         &-right
             flex-direction: row
     .booking
-        width: 340px
+        width: 370px
     .slider
         width: 100%
     .map
-        width: 340px
+        width: 370px
 @media (max-width: 768px)
     .container
         max-width: 576px
@@ -104,7 +104,15 @@
     .hotel
         &__slider
             margin-bottom: 20px
-@media ( max-width: 330px)
+@media (max-width: 450px)
+    .slider
+        height: 179px
+        &-button
+            width: 12px
+            height: 12px
+@media (max-width: 330px)
     .container
         max-width: 278px
         width: 85%
+    .slider
+        width: 278px
